--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hci-projekt",
+  "name": "movie_night",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,13 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.8",
+    "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "tailwindcss": "^3.0.15"
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.9",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18"
   }
 }
