--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "12.0.9",
+    "next-seo": "^5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -17,6 +18,7 @@
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "postcss": "^8.4.6",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.0.18"
   }
 }
